--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>React.js Boilerplate</title>
+    <title>資訊肥胖症檢測</title>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
