updated and linked with ga

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,11 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>資訊肥胖症檢測</title>
+    <meta name="description" content="覺得「資訊吸收很煩，傳遞資訊更煩」？「想傳遞好的資訊，卻力不從心」？快來做做資訊肥胖症檢測吧！及早發現，及早治療！">
+    <meta property="og:url" content="https://survey.relab.cc/" />
+    <meta property="og:title" content="資訊肥胖症檢測" />
+    <meta property="og:description" content="覺得「資訊吸收很煩，傳遞資訊更煩」？「想傳遞好的資訊，卻力不從心」？快來做做資訊肥胖症檢測吧！及早發現，及早治療！" />
+    <meta property="og:image" content="https://survey.relab.cc/og-image.png" />
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
